Finished building html part, added three main sections with content except images

--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
 <body>
   <section class="hero-section">
     <div class="hero-main-text-container">
+      <div class="background-image-container"></div>
       <h1>Visit Vilnius</h1>
-
+      <h2>Enjoy culture and scenaries in this oldschool capital of Lithuania</h2>
     </div>
-
   </section>
 
+  <section class="activities-section">
+    <h3>Top three activities to do in Vilnius</h3>
+    <img src="#" alt="">
+    <img src="#" alt="">
+    <img src="#" alt="">
+  </section>
+
+  <section class="guide-section">
+    <div class="guide-card-container-left">
+      <h3>Your guide</h3>
+      <p>"I have lived in Vilnius for over 20 years, so I can show you all of its best parts and hidden secrets."</p>
+      <h4>Skirmantas Špakovskis</h4>
+      <div class="guide-card-container-right">
+        <img src="#" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
