Added hero section, background image and overlaying text over it

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 
 <body>
-  <section class="hero-section">
-    <div class="hero-main-text-container">
-      <div class="background-image-container"></div>
+  <div class="hero-section">
+    <div class="hero-text">
       <h1>Visit Vilnius</h1>
-      <h2>Enjoy culture and scenaries in this oldschool capital of Lithuania</h2>
+      <h2>Enjoy culture and scenaries in this oldschool<br>capital of Lithuania</h2>
     </div>
-  </section>
+  </div>
 
   <section class="activities-section">
     <h3>Top three activities to do in Vilnius</h3>
+    <div class="activities-container">
+      <img src="Images/water-park.jpg" alt="water park photo with alot of slides" id="waterpark-img">
+      <h4>Swim in water-park</h4>
+      <p>Vichy water-park waiting for you to slide from the very top</p>
+    </div>
     <img src="#" alt="">
     <img src="#" alt="">
     <img src="#" alt="">
@@ -34,6 +38,7 @@
       </div>
     </div>
   </section>
+
 </body>
 
 </html>
