finished last section by adding tour guide card

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <div class="hero-section">
     <div class="hero-text">
       <h1>Visit Vilnius</h1>
@@ -18,23 +19,37 @@
 
   <section class="activities-section">
     <h3>Top three activities to do in Vilnius</h3>
-    <div class="activities-container">
-      <img src="Images/water-park.jpg" alt="water park photo with alot of slides" id="waterpark-img">
-      <h4>Swim in water-park</h4>
-      <p>Vichy water-park waiting for you to slide from the very top</p>
+    <div class="action-wrapper-container">
+      <div class="activities-container">
+        <img src="Images/water-park.jpg" alt="water park photo with alot of slides" class="waterpark-img img-wrapper">
+        <h4>Swim in water-park</h4>
+        <p>Vichy water-park waiting for you to slide from the very top</p>
+      </div>
+
+      <div class="activities-container">
+        <img src="Images/vilnius-park.jpg" alt="water park photo with alot of slides" class="img-wrapper">
+        <h4>Go for a piknic in the local park</h4>
+        <p>Bernardinu park is a perfect place for piknic, getting some tan, or just chilling out</p>
+      </div>
+
+      <div class="activities-container">
+        <img src="Images/water-park.jpg" alt="water park photo with alot of slides" class="img-wrapper">
+        <h4>Swim in water-park</h4>
+        <p>Vichy water-park waiting for you to slide from the very top</p>
+      </div>
+
     </div>
-    <img src="#" alt="">
-    <img src="#" alt="">
-    <img src="#" alt="">
+
   </section>
 
   <section class="guide-section">
-    <div class="guide-card-container-left">
-      <h3>Your guide</h3>
-      <p>"I have lived in Vilnius for over 20 years, so I can show you all of its best parts and hidden secrets."</p>
-      <h4>Skirmantas Špakovskis</h4>
-      <div class="guide-card-container-right">
-        <img src="#" alt="">
+    <div class="guide-card">
+      <img src="Images/personal-guide.png" alt="">
+      <div class="text-wrapper">
+        <h3>Your guide</h3>
+        <p>"I have lived in Vilnius <br>for over 20 years, so I can <br>show you all of its best parts <br> and hidden
+          secrets."</p>
+        <h4>Skirmantas Špakovskis</h4>
       </div>
     </div>
   </section>
@@ -42,3 +57,16 @@
 </body>
 
 </html>
+
+<!-- <div class="guide-card">
+
+  <div class="guide-card-container-left">
+    <img src="Images/personal-guide.png" alt="personal guide photo standing on a cliff scenarie are to blue sea">
+  </div>
+
+  <div class="guide-card-container-right">
+    <h3>Your guide</h3>
+    <p>"I have lived in Vilnius for over 20 years, so I can show you all of its best parts and hidden secrets."</p>
+    <h4>Skirmantas Špakovskis</h4>
+  </div>
+</div> -->
